# Vault

./: Cargo.toml  vault.code-workspace
docs/: DataStructures.md  HowTo.md  HowTo_CreateVault.md  UC_GenerateSystemKey.md  info.md
docs/diagrams/src/: DataStructues.wsd  HowTo_CreateNewProfile.wsd  HowTo_CreateNewScope.wsd  HowTo_CreateNewSecret.wsd  HowTo_CreateNewVault.wsd  HowTo_GetASecret.wsd
src/cli/: Cargo.toml
src/cli/src/: default_values.rs  main.rs  parser.rs
src/service/: Cargo.toml
src/service/src/: main.rs
src/vault/: Cargo.toml
src/vault/src/: abstractions.rs  authentication.rs  cipher.rs  helpers.rs  lib.rs  mod.rs  profile.rs  scope.rs  secret.rs  store.rs
src/vault/src/information_sources/: abstractions.rs  mod.rs  sys_information_souce.rs
src/vault/src/store/: abstractions.rs  memory_store.rs  mod.rs  store_manager.rs
src/vault/tests/unit/: lib.rs
