[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name="cli"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vault = { path = "/Work.Rust/vault/src/vault" }
clap = { version = "4.2.2", features = ["cargo", "debug"] }