[package]
name = "service"
version = "0.1.0"
edition = "2021"

[[bin]]
name="vault-service"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# vault = { path = "/Work.Rust/vault/src/vault" }
axum = "0.6.18"
axum-server = { version = "0.5.1", features = [] }
tokio = {version = "1.28.2", features = ["macros","rt-multi-thread"]  }
serde = "1.0.163"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["trace"] }