[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
state = { version = "0.5.3", features = ["tls"] }
bincode = "1.3.3"

# Cryptographic libs
argon2 = "0.5.0"
chacha20poly1305 = "0.10.1"
sha3 = "0.10.7"